--- a/script/index.css
+++ b/script/index.css
@@ -1,8 +1,8 @@
 #banner {
-	background-image: url('../img/banner-bbcc.png');
+	background-image: url('../img/King Porker.png');
 	background-size: cover;
 	background-position: center center;
-	height: 40vh;
+	height: 40px;
 }
 @media (min-width: 992px) {
 	#banner {
